--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,9 @@
 {
   "semi": true,
   "singleQuote": true,
-  "trailingComma": "es5",
-  "printWidth": 70,
-  "tabWidth": 2
+  "trailingComma": "all",
+  "printWidth": 80,
+  "tabWidth": 2,
+  "bracketSpacing": true,
+  "arrowParens": "always"
 }
