--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@emotion/react": "^11.13.3",
     "@supabase/ssr": "^0.5.1",
     "@supabase/supabase-js": "^2.45.6",
+    "@tanstack/react-query": "^5.59.20",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
     "lucide-react": "^0.454.0",
     "next": "^15.0.2",
@@ -25,6 +27,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.1.0",
     "@eslint/js": "^9.13.0",
+    "@tanstack/eslint-plugin-query": "^5.60.1",
     "@types/cors": "^2.8.17",
     "@types/node": "^22.7.5",
     "@types/react": "^18",
