--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
     "lucide-react": "^0.454.0",
-    "next": "^15.0.2",
+    "next": "^15.0.4",
     "next-themes": "^0.3.0",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-icons": "^5.3.0"
   },
   "devDependencies": {
@@ -37,7 +37,7 @@
     "@typescript-eslint/parser": "^8.11.0",
     "concurrently": "^9.0.1",
     "eslint": "^9.12.0",
-    "eslint-config-next": "15.0.0",
+    "eslint-config-next": "^15.0.4",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "postcss": "^8",
