--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "lucide-react": "^0.454.0",
     "next": "^15.0.4",
     "next-themes": "^0.3.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-icons": "^5.3.0"
   },
   "devDependencies": {
